# project-knowledge-assistant

./: .gitignore  DEMO_SCRIPT.md  PROJECT_PLAN.md  README.md  TOOL_ROUTING_PLAN.md  architecture.mmd  main.py  pyproject.toml
api/: api.py
data/: README.md
notebooks/: test.ipynb
src/config/: config.py
src/document_Ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/nodes/: nodes.py
src/state/: rag_state.py
src/vectorstore/: vector_store.py
ui/: streamlit_app.py
