[project]
name = "project-knowledge-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.103.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-agents>=0.1.0",
    "openai>=1.0.0",
    "pydantic>=2.12.5",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.26.0",
    "tiktoken>=0.7.0",
    "uvicorn>=0.23.2",
    "wikipedia>=1.4.0",
]
